--- a/index.html
+++ b/index.html
@@ -4,10 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculator</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1> Heading</h1>
-    
+    <div class="main-container">
+        <div class="result-container" >
+            <div class="reset-button" >AC</div>
+            <div class="input">0</div>
+            <div class="output"><b>0</b></div>
+        </div>
+        <div class="number-container">
+            <button>7</button>
+            <button >8</button>
+            <button >9</button>
+            <button class ="red-text">/</button>
+            <button >4</button>
+            <button >5</button>
+            <button >6</button>
+            <button class ="red-text">*</button>
+            <button >1</button>
+            <button >2</button>
+            <button >3</button>
+            <button class ="red-text">-</button>
+            <button >.</button>
+            <button >0</button>
+            <button class ="green-text">=</button>
+            <button class ="red-text">+</button>
+            
+        </div>
+    </div>
+    <script src="./script.js"></script>
 </body>
 </html>
